--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-formly/core": "^4.7.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "ngx-permissions": "^6.0.1",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.2",
     "rxjs": "^6.0.0",
@@ -40,7 +41,7 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
